Paragraphenzeichen latexfreundlicher gestaltet, (Paragraphen-) Indizes ergänzt

--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -10,21 +10,21 @@ Rechtssätze sind Handlungsanweisungen. Gleichgültig, ob die fragliche \emph{No
 \subsection{Formale Strukturen}
 Gliederung schafft Übersicht. Daher sind unterschiedliche Rechtsbereiche in unterschiedlichen Gesetzen geregelt. Die wichtigste Gliederungsebene in Gesetzen (wie auch in den Satzungen der Partei) sind die \emph{Paragraphen},\footnote{Seltener, z.B. im Grundgesetz, die Artikel.} die zur einfacheren Auffindbarkeit und Zitierbarkeit von Normen fortlaufend nummeriert sind.
 
-Umfassendere Regelwerke (wie bspw. das BGB\nomenclature{BGB}{Bürgerliches Gesetzbuch}) sind darüber teilweise in Bücher, Teile, Abschnitte, Unterabschnitte, Titel, Untertitel, Kapitel usw. gegliedert. Eine solche Gliederung nimmt die Satzung der Piratenpartei Deutschland insofern vor, als dass sie in drei \enquote{Abschnitte} unterteilt ist. Da die Abschnitte allerdings jeweils unterschiedlich zitiert werden, nämlich die Grundlagensatzung\footnote{Wird \enquote{die Bundessatzung} zitiert, bezieht sich das Zitat in der Regel auf die Grundlagensatzung.} (Abschnitt~A), die Finanzordnung (Abschnitt~B) und die Schiedsgerichtsordnung (Abschnitt~C) und auch die Paragraphenzählung jeweils bei 1 beginnt, ist es leichter, sie sich als eigenständige Regelwerke zu vergegenwärtigen. So untergliedert letztlich nur die Finanzordnung oberhalb der Ebene der Paragraphen. Diese Gliederungsebene oberhalb der Paragraphen in der Finanzordnung ist nicht benannt. Da \enquote{Abschnitte} aber bereits, wie geschildert, durch die Gesamtsatzung verwendet werden, empfiehlt sich die Verwendung der neutralen Bezeichnung \enquote{Teil}.\footnote{Insb. \enquote{Unterabschnitt} ist ungeeignet, da die Gliederung in Abschnitte, wie geschildert, kaum argumentativ dargestellt wird.}
+Umfassendere Regelwerke (wie bspw. das BGB\nomenclature{BGB}{Bürgerliches Gesetzbuch}) sind darüber teilweise in Bücher, Teile, Abschnitte, Unterabschnitte, Titel, Untertitel, Kapitel usw. gegliedert. Eine solche Gliederung nimmt die Satzung der Piratenpartei Deutschland insofern vor, als dass sie in drei \enquote{Abschnitte} unterteilt ist. Da die Abschnitte allerdings jeweils unterschiedlich zitiert werden, nämlich die Grundlagensatzung (BS\nomenclature{BS}{Bundessatzung (Abschnitt~A der Bundessatzung, Grundlagensatzung)}, Abschnitt~A)\footnote{Wird \enquote{die Bundessatzung} zitiert, bezieht sich das Zitat in der Regel auf die Grundlagensatzung.}, die Finanzordnung (FO\nomenclature{FO}{Finanzordnung (Abschnitt~B der Bundessatzung)}, Abschnitt~B) und die Schiedsgerichtsordnung (SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)}, Abschnitt~C) und auch die Paragraphenzählung jeweils bei 1 beginnt, ist es leichter, sie sich als eigenständige Regelwerke zu vergegenwärtigen. So untergliedert letztlich nur die Finanzordnung oberhalb der Ebene der Paragraphen. Diese Gliederungsebene oberhalb der Paragraphen in der Finanzordnung ist nicht benannt. Da \enquote{Abschnitte} aber bereits, wie geschildert, durch die Gesamtsatzung verwendet werden, empfiehlt sich die Verwendung der neutralen Bezeichnung \enquote{Teil}.\footnote{Insb. \enquote{Unterabschnitt} ist ungeeignet, da die Gliederung in Abschnitte, wie geschildert, kaum argumentativ dargestellt wird.}
 
 Paragraphen gliedern sich zunächst in Absätze. Auch Absätze sind nummeriert, allerdings nur eindeutig in Bezug auf den Paragraphen, nicht mehr in Bezug auf das \enquote{Gesamtwerk}. Absätze können einen oder mehrere Sätze und/oder Nummern (d.h. Aufzählungen, teilweise ihrerseits verschachtelt) enthalten. Teilweise bietet es sich an, Sätze als Halbsätze, Alternativen oder Varianten zu zitieren, wenn sich in einem einzelnen Satz mehrere Kombinationen von Tatbeständen und Rechtsfolgen verbergen (s.u. \emph{Tatbestände und Rechtsfolgen}).
 
 \subsubsection{Das Normzitat}
 Da der Paragraph (Artikel) die wichtigste Gliederungsebene ist, ist er der Ausgangspunkt eines jeden Normzitats. Von ihm ausgehend wird \enquote{nach unten}, d.h. nach Absätzen, Sätzen, Nummern usw. zitiert. Je genauer der betreffende Abschnitt durch das Zitat benannt wird, desto leichter lässt er sich durch den Leser wiederfinden – es gilt: \Zitat{Viel hilft viel}! Erst am Ende wird das jeweilige Regelwerk benannt, dem der Paragraph entstammt.\footnote{Das \enquote{Quellregelwerk} erst am Ende zu benennen, mag der Ordnung des Zitats – \Zitat{vom Großen ins Kleine} – widersprechen, findet jedoch im juristischen Gebrauch absolute Verbreitung.} Die Gliederungsebenen zwischen der Ebene \enquote{Regelwerk} und der Ebene \enquote{Paragraph} werden nicht mitzitiert, da sie lediglich der systematischen Übersicht dienen; die Nennung von Regelwerk und nummeriertem Paragraphen reicht zur Auffindung bereits aus.\footnote{Es gibt daher auch keine vereinheitlichen Regeln über Verwendung oder gar Rangfolge dieser reinen \enquote{Gliederungsebenen}; sie können vom jeweiligen Gesetz- bzw. Satzungsgeber völlig frei verwendet werden.}
 
-\textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~\nomenclature{BS}{Bundessatzung (Abschnitt~A, Grundlagensatzung)}\index[paridx]{BS!\S~9a!Abs.~9~S.~2} (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
+\textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~BS\nomenclature{BS}{Bundessatzung (Abschnitt~A, Grundlagensatzung)}\index[paridx]{BS!\S~9a!Abs.~9~S.~2} (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
 
 \subsection{Tatbestände und Rechtsfolgen}
 Wichtiger als die formalen, äußeren Strukturen ist der semantische, innere Aufbau von Normen: Sie gliedern sich in \emph{Tatbestände} und \emph{Rechtsfolgen}. Dem zu Grunde liegt ein simples \emph{Wenn-Dann}-Prinzip: Wenn der Tatbestand erfüllt ist, tritt die Rechtsfolge ein.
 
 Tatbestände sind demnach reelle Sachverhalte, also tatsächliche Geschehnisse oder Handlungen. Die Rechtsfolgen sind die Handlungsanweisungen (s.o.), die sich ergeben, wenn ein solcher Sachverhalt eintritt, ein Tatbestand also erfüllt wird. Zuweilen führen mehrere Tatbestände zur selben Rechtsfolge, ebenso können an einen Tatbestand mehrere Rechtsfolgen geknüpft werden (in dieser Konstellation oft mit einer Auswahl durch die Rechtsanwenderin oder den Rechtsanwender). In einem Satz können sich dadurch durchaus mehrere Rechtssätze verbergen.
 
-\textbf{Beispiel:} \S~6 Abs.~1 S.~1~BS\index[paridx]{BS!\S~6!Abs.~1 S.~1} (\Zitat{Verstößt ein Pirat gegen die Satzung oder gegen Grundsätze oder Ordnung der Piratenpartei Deutschland und fügt Ihr damit Schaden zu, so kann der Bundesvorstand folgende Ordnungsmaßnahmen anordnen: Verwarnung, Verweis, Enthebung von einem Parteiamt, Aberkennung der Fähigkeit ein Parteiamt zu bekleiden, Ausschluss aus der Piratenpartei Deutschland.} enthält insg. 15 Rechtssätze: An die drei Tatbestände Satzungsverstoß, Grundsatzverstoß oder Ordnungsverstoß können nach Auswahl des Bundesvorstands jeweils fünf Rechtsfolgen (Verwarnung, Verweis, Enthebung, Wählbarkeitsverlust, Ausschlussantrag beim Schiedsgericht\footnote{Vgl. \S~6 Abs.~2~BS,\index[paridx]{BS!\S~6!Abs.~2} ebenso \S~10 Abs.~5 S.~1~\nomenclature{PartG}{Gesetz über die politischen Parteien (Parteiengesetz)}.\index[paridx]{PartG!\S~10!Abs.~4 S.~1}} geknüpft werden.
+\textbf{Beispiel:} \S~6 Abs.~1 S.~1~BS\index[paridx]{BS!\S~6!Abs.~1 S.~1} (\Zitat{Verstößt ein Pirat gegen die Satzung oder gegen Grundsätze oder Ordnung der Piratenpartei Deutschland und fügt Ihr damit Schaden zu, so kann der Bundesvorstand folgende Ordnungsmaßnahmen anordnen: Verwarnung, Verweis, Enthebung von einem Parteiamt, Aberkennung der Fähigkeit ein Parteiamt zu bekleiden, Ausschluss aus der Piratenpartei Deutschland.} enthält insg. 15 Rechtssätze: An die drei Tatbestände Satzungsverstoß, Grundsatzverstoß oder Ordnungsverstoß können nach Auswahl des Bundesvorstands jeweils fünf Rechtsfolgen (Verwarnung, Verweis, Enthebung, Wählbarkeitsverlust, Ausschlussantrag beim Schiedsgericht\footnote{Vgl. \S~6 Abs.~2~BS,\index[paridx]{BS!\S~6!Abs.~2} ebenso \S~10 Abs.~5 S.~1~PartG.\nomenclature{PartG}{Gesetz über die politischen Parteien (Parteiengesetz)}\index[paridx]{PartG!\S~10!Abs.~4 S.~1}} geknüpft werden.
 
 %\subsection{Verweisungen}
 
@@ -84,7 +84,7 @@ Systematische Ordnung bedeutet, dass die Anordnung von Einzelnormen im Gesamtreg
 \subsubsection{Historische Auslegung}
 Die historische Auslegung befasst sich mit der Entstehungs- und Änderungsgeschichte einer Norm. Bspw. aus Diskussionsprotokollen kann hervorgehen, ob nach dem Willen der Autorinnen und Autoren ein Sachverhalt vom Tatbestand einer Norm erfasst werden sollte, oder nicht. Ebenso ist eine Änderung, die dazu führte, dass ein einstmals eindeutig erfasster Sachverhalt nun zweifelhaft erscheint, ein klares Indiz für eine enge Auslegung der jeweiligen Norm.
 
-Für die Satzungen privatrechtlicher Organisationen (so auch Parteien) gilt jedoch allgemein, dass ihre Satzungen aus sich heraus verständlich sein sollen. Weder soll Recherche zu (ohnehin selten in der notwendigen Ausführlichkeit bestehenden) Protokollen, noch zu alten Fassungen der Satzung notwendig sein. Daraus wird abgeleitet, dass sich die historische Auslegung allgemein verbietet.\footnote{Sauter, Rn.~36.} Ausnahmen hiervon sind daher stets gut zu begründen!
+Für die Satzungen privatrechtlicher Organisationen (so auch Parteien) gilt jedoch allgemein, dass ihre Satzungen aus sich heraus verständlich sein sollen. Weder soll Recherche zu (ohnehin selten in der notwendigen Ausführlichkeit bestehenden) Protokollen, noch zu alten Fassungen der Satzung notwendig sein. Mit der \enquote{Vertragstheorie}, die davon ausgeht, dass die Satzung als Grundlagendokument einer privatrechtlichen Vereinigung letztlich ein privatrechtlicher Vertrag ist, der ein \enquote{Eigenleben} entwickelt hat, kann man zudem argumentieren, dass \S~157~BGB\index[paridx]{BGB!\S~157} insb. durch den Verweis auf die (aktuelle) \Zitat{Verkehrssitte} einen starken Gegenwartsbezug aufweist. Aus diesen Argumenten wird abgeleitet, dass sich die historische Auslegung allgemein verbietet.\footnote{Sauter, Rn.~36.} Ausnahmen hiervon sind daher stets gut zu begründen!
 
 \subsubsection{Teleologische Interpretation}
 Die teleologische Interpretation leitet sich von \enquote{τέλος} (gr. \enquote{Ziel}) ab. Der Schwerpunkt liegt hier also auf dem Zweck der Norm, nicht auf ihrem Wortlaut. In die Nähe zur historischen Auslegung rückt dabei die Fragestellung, was der ursprüngliche Zweck der Norm war, besser: ist. In die Nähe der systematischen Auslegung rückt die Frage, was mit einer solchen Norm \enquote{objektiv sinnvoll} bezweckt werden kann; hier wird nach dem Sinn und Zweck der Norm im aktuellen Gefüge gefragt. Die Antworten auf diese Fragen geben regelmäßig den Ausschlag, wenn bloße Wortlaut- und systematische Auslegung nicht weiter geholfen haben.
