--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -4,7 +4,7 @@
 \chapter{Urteilsaufbau}
 
 \section{Grundlagen}
-Gem. \S~12 Abs.~3 S.~1~\nomenclature{SGO}{Schiedsgerichtsordnung}\index[paridx]{SGO!\S~12!Abs.~3 S.~1} enthält ein Urteil \Zitat{einen Tenor, eine Sachverhaltsdarstellung und eine Begründung der Sach- und Rechtslage.} Es empfiehlt sich, dieser Aufzählung notwendiger Inhalte auch in der Reihenfolge zu folgen. Ein Urteil beginnt daher, nach einigen Formalien im \emph{Rubrum}, mit der letztendlichen Entscheidung des Gerichts. Sie wird im \emph{Tenor} aufgeführt. Erst danach wird der \emph{Sachverhalt} dargestellt und die im Tenor verkündeten Entscheidungen des Gerichts in den \emph{Entscheidungsgründen} begründet. Sofern gegen das Urteil Rechtsmittel eingelegt werden können, wird es mit einer \emph{Rechtsmittelbelehrung} abgeschlossen. Während gem. \S11 Abs.~7~SGO\index[paridx]{SGO!\S~11!Abs.~7} lediglich die Dokumentationsvorschriften explizit auch für einstweilige Anordnungen gelten, ist es gängige Praxis, sämtliche Vorschriften über Urteile auf einstweilige Anordnungen sinngemäß anzuwenden.
+Gem. \S~12 Abs.~3 S.~1~SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)}\index[paridx]{SGO!\S~12!Abs.~3 S.~1} enthält ein Urteil \Zitat{einen Tenor, eine Sachverhaltsdarstellung und eine Begründung der Sach- und Rechtslage.} Es empfiehlt sich, dieser Aufzählung notwendiger Inhalte auch in der Reihenfolge zu folgen. Ein Urteil beginnt daher, nach einigen Formalien im \emph{Rubrum}, mit der letztendlichen Entscheidung des Gerichts. Sie wird im \emph{Tenor} aufgeführt. Erst danach wird der \emph{Sachverhalt} dargestellt und die im Tenor verkündeten Entscheidungen des Gerichts in den \emph{Entscheidungsgründen} begründet. Sofern gegen das Urteil Rechtsmittel eingelegt werden können, wird es mit einer \emph{Rechtsmittelbelehrung} abgeschlossen. Während gem. \S11 Abs.~7~SGO\index[paridx]{SGO!\S~11!Abs.~7} lediglich die Dokumentationsvorschriften explizit auch für einstweilige Anordnungen gelten, ist es gängige Praxis, sämtliche Vorschriften über Urteile auf einstweilige Anordnungen sinngemäß anzuwenden.
 
 Anders als bei Urteilen des Europäischen Gerichtshofes oder z.B. französischen Gerichten oder Gerichten aus dem angelsächsischen Rechtsraum werden Urteile in Deutschland regelmäßig in \enquote{ganz normalem Fließtext} verfasst, d.h. als mehrere Sätze, in Absätze unterteilt, regelmäßig mit Zwischenüberschriften gegliedert. Die Parteien werden im Rahmen der Schiedsgerichtsordnung schlicht als \emph{Antragstellerinnen} und \emph{Antragsgegnerinnen} bezeichnet (nicht etwa als Klägerinnen und Beklagte); \enquote{Angeklagte} kennt die SGO auch im Falle von Ordnungsmaßnahmen nicht. Auch sonst sollte die Sprache möglichst einfach gehalten sein: Ein gutes Urteil kommt ohne komplexe Schachtelsätze aus.
 
@@ -32,12 +32,13 @@ In einem Berufungsverfahren wird die Bezeichnung als \enquote{Antragstellerin} o
 \section{Tenor}
 Der Tenor enthält die Entscheidung (oder die Entscheidungen) in der Hauptsache.
 
-Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sind (\S~16 Abs.~1 S.~1~SGO),\index[paridx]{SGO!\S~16!Abs.~1~S.~1} kann eine Kostenentscheidung entfallen. Auch einer Entscheidung über vorläufige Vollstreckbarkeit bedarf es nicht, da die SGO weder Vollstreckungsvorschriften vorsieht, noch Maßnahmen zur Zwangsvollstreckung kennt. Ebenso ist nicht notwendig, ein mögliches Rechtsmittel im Tenor aufzuführen, da über die Möglichkeit von Rechtsmitteln nicht durch das Gericht entschieden wird: Die Entscheidung, ob Rechtsmittel möglich sind, oder nicht, wird von der SGO getroffen. Da sie dem Gericht nicht überlassen ist, ist sie auch im Tenor nicht zu erwähnen. Sind Rechtsmittel möglich, sind die Parteien darüber gesondert zu belehren (\S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!\S~13!Abs.~2~S.~3}, siehe unten).
+Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sind (\S~16 Abs.~1 S.~1~SGO),\index[paridx]{SGO!\S~16!Abs.~1~S.~1} kann eine Kostenentscheidung entfallen. Auch einer Entscheidung über vorläufige Vollstreckbarkeit\index[idx]{Vollstreckung!vorläufige} bedarf es nicht, da die SGO weder Vollstreckungsvorschriften vorsieht, noch Maßnahmen zur Zwangsvollstreckung kennt. Ebenso ist nicht notwendig, ein mögliches Rechtsmittel im Tenor aufzuführen, da über die Möglichkeit von Rechtsmitteln nicht durch das Gericht entschieden wird: Die Entscheidung, ob Rechtsmittel möglich sind, oder nicht, wird von der SGO getroffen. Da sie dem Gericht nicht überlassen ist, ist sie auch im Tenor nicht zu erwähnen. Sind Rechtsmittel möglich, sind die Parteien darüber gesondert zu belehren (\S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!\S~13!Abs.~2~S.~3}, siehe unten).
 
 Die Entscheidungsformel ist der wichtigste Teil des Urteils. Sie ist besonders sorgfältig zu formulieren. Unterlaufen Fehler, kann das darin münden, dass keine konkreten Rechtsfolgen und/oder Handlungsanweisungen für die Parteien abgeleitet werden können, dass für etwas keine Rechtskraft erwächst oder aber etwas unbeabsichtigt nicht oder falsch gestaltet wird.
 
-Der Tenor muss vollstreckbar sein.\footnote{Zitat aus der ZPO vll?}
-% Hier fehlt noch stuff!
+Obwohl die Schiedsgerichtsordnung keine Regeln zur Vollstreckung\index[idx]{Vollstreckung} kennt (s.o.) und es daher regelmäßig den zum Tun oder Unterlassen verpflichteten Organen obliegt, die Urteile umzusetzen, sollte bei der Tenorierung unbedingt darauf geachtet werden, dass der Tenor \emph{vollstreckbar} ist. In der staatlichen Gerichtsbarkeit bedeutet Vollstreckung die zwangsweise Durchsetzung des Urteils. Sollen aber Zwangsmittel (wie bspw. Zwangsgelder, die eingetrieben werden, bis eine Verpflichtung aus einem Urteil erfüllt wurde) verhängt werden, soll also aus dem Tenor vollstreckt werden, so muss aus dem Tenor klar abzuleiten sein, welches Tun oder Unterlassen im Einzelnen erwartet wird. Die \enquote{Vollstreckbarkeit} eines Tenors bedeutet also, dass auch hohen Ansprüchen an Klarheit und Eindeutigkeit genügt: Die prinzipielle \enquote{Vollstreckbarkeit} liegt dann vor, wenn stets eindeutig feststellbar ist, ob die durch das Urteil Verpflichteten ihren jeweiligen Verpflichtungen nachkommen bzw. nachgekommen sind oder nicht. Dies dient einerseits der Verständlichkeit des Urteils, andererseits kann es ggf. auch die Vollstreckung vor einem staatlichen Gericht ermöglichen oder vereinfachen.
+
+Der einzige Tenor, der nicht der Vollstreckbarkeit zugänglich ist, ist die \emph{Feststellung}. Anstatt durch Urteil Rechte oder Pflichten aufzuerlegen, wird hier lediglich das Bestehen oder Nichtbestehen eines bestimmten Rechtsverhältnisses festgestellt (bspw. die Nichtigkeit einer Satzungsänderung oder einer Wahl). Diese Feststellung ist so nicht vollstreckbar; die Existenz oder Nichtexistenz einer Rechtsbeziehung ist nicht erzwingbar. Lediglich die Akzeptanz einer solchen Feststellung könnte erzwungen werden; in diesem Falle jedoch ist nicht \emph{festzustellen}, sondern zu \emph{verpflichten}. Aus diesem Grunde ist eine Feststellungsklage nur subsidiär\index[idx]{Feststellungsklage!Subsidiarität} zuständig, wenn eine Anfechtungs- oder Verpflichtungsklage nicht möglich ist (dazu ausführlich unter \enquote{Zulässigkeit}.
 
 \section{Sachverhalt}
 Gemäß \S~12 Abs.~3 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~3~S.~1~SGO} enthält ein Urteil unter anderem eine Sachverhaltsdarstellung. In diesem Abschnitt sind die tatsächlichen Feststellungen, die der Entscheidung des Gerichts zu Grunde liegen, objektiv und neutral aufzuführen. Er muss aus sich heraus verständlich sein, Verweise sollten nur ausnahmsweise verwendet werden; insbesondere muss hier sichergestellt sein, dass die entsprechende Quelle auch nach geraumer Zeit noch verfügbar sein wird. Sind Teile von Dokumenten für die Entscheidung maßgeblich, sollten sie im entsprechenden Umfang zitiert werden, anstatt lediglich zu verweisen.
@@ -51,7 +52,7 @@ Im Normalfall beginnt ein Urteil mit der Prozessgeschichte und den unstreitigen 
 Der Sachverhalt sollte so kurz wie möglich gefasst sein, Überflüssiges ist wegzulassen. Zur Kontrolle gilt: Jede Begründung benötigt eine korrespondierende Darstellung der Fakten im Sachverhalt – Fakten, auf die in der Begründung nicht Bezug genommen werden, sind überflüssig. Rechtliche Bewertungen durch das Gericht finden in der Sachverhaltsdarstellung keinen Platz.
 
 \section{Entscheidungsgründe}
-Das Urteil ist das Ergebnis der juristischen Prüfung des Gerichts. Während die Prüfung selbst in der Regel nach dem weiter oben beschriebenen \enquote{Gutachtenstil} folgt, der zum Ergebnis hinführt, wird im Urteil vom Ergebnis ausgehend begründet (\enquote{Urteilsstil})\index[idx]{Urteilsstil}. In den Entscheidungsgründen\footnote{Diese Formel ist für Urteile in der Zivilgerichtsbarkeit üblich; bei Beschlüssen der Zivilgerichtsbarkeit sowie Urteilen im Strafprozess hat sich die Verwendung von \enquote{Gründe} eingebürgert.} legt das Gericht dar, warum die gefällte Entscheidung so – und nicht anders – gefällt werden musste.
+Das Urteil ist das Ergebnis der juristischen Prüfung des Gerichts. Während die Prüfung selbst in der Regel nach dem weiter oben beschriebenen \enquote{Gutachtenstil} folgt, der zum Ergebnis hinführt, wird im Urteil vom Ergebnis ausgehend begründet (\enquote{Urteilsstil})\index[idx]{Urteilsstil}. In den Entscheidungsgründen\footnote{Diese Formel ist für Urteile in der Zivilgerichtsbarkeit üblich; bei Beschlüssen der Zivilgerichtsbarkeit sowie Urteilen im Strafprozess wird schlicht \enquote{Gründe} verwendet.} legt das Gericht dar, warum die gefällte Entscheidung so – und nicht anders – gefällt werden musste.
 
 Die streitentscheidenden Normen sind im ersten Satz aufzuführen und im Ergebnis zu bewerten.%Wäre hier ein Beispiel angebracht?
 Danach folgt die juristische Würdigung der Rechtslage, d.h. bei einer erfolgreichen Klage eine Prüfung aller relevanten Tatbestandsmerkmale in geeigneter Reihenfolge; bei einer abweisenden Klage genügt die Schilderung des (in der Prüfreihenfolge zuerst auftauchenden) Grundes ihres Scheiterns.
@@ -68,22 +69,22 @@ Gefahren bestehen bei \emph{obiter dicta} allerdings (auch) darin, dass sie spä
 Wenngleich die Verwendung von \emph{obiter dicta} innerhalb der Schiedsgerichtsbarkeit der Piratenpartei häufiger und ausführlicher vorkommen dürfte – und darf – als das bei staatlichen Gerichten der Fall ist, ist bei ihrer Verwendung äußerste Vorsicht geboten.
 
 \subsection{Abweichende Meinungen}
-Gemäß §~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!§~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.} Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird. Auf diese Weise bleibt die mehrheitlich beschlossene Begründung in sich konsistent und wird nicht durch Diskussionen innerhalb des Spruchkörpers unterbrochen. Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend ans Ende des Urteilstext als eigenen Abschnitt anzuhängen, anstatt sie über die Urteilsbegründungen zu verteilen. Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie vor die abweichenden Meinungen gesetzt werden.
+Gemäß \S~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.} Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird. Auf diese Weise bleibt die mehrheitlich beschlossene Begründung in sich konsistent und wird nicht durch Diskussionen innerhalb des Spruchkörpers unterbrochen. Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend ans Ende des Urteilstext als eigenen Abschnitt anzuhängen, anstatt sie über die Urteilsbegründungen zu verteilen. Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie nach die abweichenden Meinungen gesetzt werden, um die abweichenden Meinungen weiter \Zitat{in der Urteilsbegründung} zu halten.
 
-Näheres zur abweichenden Meinung sollen die Schiedsgerichte in ihrer Geschäftsordnung regeln, §~12 Abs.~4 S.~2~SGO.
+Näheres zur abweichenden Meinung sollen die Schiedsgerichte in ihrer Geschäftsordnung regeln, \S~12 Abs.~4 S.~2~SGO\index[paridx]{SGO!\S12!Abs.~4}.
 
 \section{Die Rechtsmittelbelehrung}
-Eine Rechtsmittelbelehrung soll gemäß §~12 Abs.~5~SGO\index[paridx]{SGO!§~12!Abs.~5} zumindest dann erfolgen, wenn gegen das Urteil die Berufung möglich ist. Die Vorschrift ist allerdings dahin auszulegen, dass die Parteien stets über mögliche Rechtsmittel belehrt werden sollen.
+Eine Rechtsmittelbelehrung soll gemäß \S~12 Abs.~5~SGO\index[paridx]{SGO!\S~12!Abs.~5} zumindest dann erfolgen, wenn gegen das Urteil die Berufung möglich ist. Die Vorschrift ist allerdings dahin auszulegen, dass die Parteien stets über mögliche Rechtsmittel belehrt werden sollen.
 
 Wann ein Rechtsmittel zulässig ist und wie in diesen Fällen zu verfahren ist, wird im Kapitel \enquote{Instanzenzug} beschrieben.
 
 \subsection{Inhalt einer Rechtsmittelbelehrung}
-Die Rechtsmittelbelehrung soll die Parteien darüber in Kenntnis setzen, welches Rechtsmittel bei welchem Gericht in welcher Form und in welcher Frist einzulegen ist. Das Rechtsmittel ist unter Zitat der entsprechenden Norm anzugeben (bspw. die Berufung gemäß §~13 Abs.~1~SGO\index[paridx]{SGO!§~13!Abs.~1}). Zusätzlich zur (eindeutigen) Benennung des Gerichts sind Einreichungsmöglichkeiten anzugeben, also zumindest die Postanschrift, ggf. E-Mail Adresse und Faxnummer des Gerichts. Die Rechtsmittelbelehrung muss den Hinweis enthalten, dass die Einreichung in Textform (d.h. auch per E-Mail) ausreichend ist. Ebenso zu den Formvorschriften gehört der Hinweis, was die Berufung enthalten muss (nämlich das Aktenzeichen und die angegriffene Entscheidung des Gerichts). Ebenso ist die Frist zu nennen, wobei sie nicht berechnet werden muss: Es reicht aus, die Parteien darüber zu belehren, dass die Berufungsfrist gemäß §~13 Abs.~2 S.~1~SGO\index[paridx]{SGO!§~13!Abs.~2} 14~Tage beträgt, sie muss nicht in einem genauen Datum angegeben werden. Diese Berechnung führt im Zweifel das Berufungsgericht aus, das an die Entscheidung der unteren Instanz ohnehin nicht gebunden wäre; die Gefahr, dass die Rechtsmittelbelehrung durch eine falsche Fristberechnung unrichtig wird, kann so umgangen werden.
+Die Rechtsmittelbelehrung soll die Parteien darüber in Kenntnis setzen, welches Rechtsmittel bei welchem Gericht in welcher Form und in welcher Frist einzulegen ist. Das Rechtsmittel ist unter Zitat der entsprechenden Norm anzugeben (bspw. die Berufung gemäß \S~13 Abs.~1~SGO\index[paridx]{SGO!\S~13!Abs.~1}). Zusätzlich zur (eindeutigen) Benennung des Gerichts sind Einreichungsmöglichkeiten anzugeben, also zumindest die Postanschrift, ggf. E-Mail Adresse und Faxnummer des Gerichts. Die Rechtsmittelbelehrung muss den Hinweis enthalten, dass die Einreichung in Textform (d.h. auch per E-Mail) ausreichend ist. Ebenso zu den Formvorschriften gehört der Hinweis, was die Berufung enthalten muss (nämlich das Aktenzeichen und die angegriffene Entscheidung des Gerichts). Ebenso ist die Frist zu nennen, wobei sie nicht berechnet werden muss: Es reicht aus, die Parteien darüber zu belehren, dass die Berufungsfrist gemäß \S~13 Abs.~2 S.~1~SGO\index[paridx]{SGO!\S~13!Abs.~2} 14~Tage beträgt, sie muss nicht in einem genauen Datum angegeben werden. Diese Berechnung führt im Zweifel das Berufungsgericht aus, das an die Entscheidung der unteren Instanz ohnehin nicht gebunden wäre; die Gefahr, dass die Rechtsmittelbelehrung durch eine falsche Fristberechnung unrichtig wird, kann so umgangen werden.
 
-Die Rechtsmittelbelehrung ist nur für Berufungen normiert. Außer der Berufung kennt die Schiedsgerichtsordnung allerdings noch den \emph{Widerspruch} gegen einstweilige Anordnung (§~11 Abs.~4~SGO)\index[paridx]{SGO!§~11!Abs.~4} und die \emph{sofortige Beschwerde} gegen die Ablehnung einer einstweiligen Anordnung (§~11 Abs.~6~SGO)\index[paridx]{SGO!§~11!Abs.~6}. Im Gegensatz zu den Dokumentationsvorschriften ist eine Anwendbarkeit der Vorschriften über die Rechtsmittelbelehrung auf diese Institute in der Schiedsgerichtsordnung nicht explizit vorgesehen. Die Abhängigkeit einer Belehrung über Verfahrensschritte im Rechtsschutz sollte allerdings von der konkreten Verfahrensart unabhängig sein. Es ist daher eher anzunehmen, dass die Vorschriften über die Belehrung zum Rechtsmittel \emph{Berufung} auf die anderen Rechtsmittel der SGO analog anzuwenden sind. Insbesondere eine korrekte Belehrung schadet in keinem Falle.
+Die Rechtsmittelbelehrung ist nur für Berufungen normiert. Außer der Berufung kennt die Schiedsgerichtsordnung allerdings noch den \emph{Widerspruch} gegen einstweilige Anordnung (\S~11 Abs.~4~SGO)\index[paridx]{SGO!\S~11!Abs.~4} und die \emph{sofortige Beschwerde} gegen die Ablehnung einer einstweiligen Anordnung (\S~11 Abs.~6~SGO)\index[paridx]{SGO!\S~11!Abs.~6}, die Nichteröffnung (\S~8 Abs.~6 S.~3~SGO)\index[paridx]{SGO!\S~8!Abs.~6} oder Verzögerung eines Verfahrens (\S~10 Abs.~8 S.~1,~2~SGO)\index[paridx]{SGO!\S~10!Abs.~9}, sowie den Nichtausschluss eines Richters vom Verfahren nach erfolgter Ablehnung (\S~5 Abs.~6 S.~2~SGO)\index[paridx]{SGO!\S~5!Abs.~6}. Im Gegensatz zu den Dokumentationsvorschriften ist eine Anwendbarkeit der Vorschriften über die Rechtsmittelbelehrung auf diese Institute in der Schiedsgerichtsordnung nicht explizit vorgesehen. Die Abhängigkeit einer Belehrung über Verfahrensschritte im Rechtsschutz sollte allerdings von der konkreten Verfahrensart unabhängig sein. Es ist daher eher anzunehmen, dass die Vorschriften über die Belehrung zum Rechtsmittel \emph{Berufung} auf die anderen Rechtsmittel der SGO analog anzuwenden sind. Insbesondere eine korrekte Belehrung schadet in keinem Falle.
 
 \subsection{Unrichtige oder unterbliebene Rechtsmittelbelehrung}
-Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, §~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!§~13!Abs.~2}. Dies ändert nichts an der Ausschlussfrist von 3~Monaten nach Zugang, nach der eine Entscheidung unanfechtbar ist. Effektiv verlängert sich bei einer fehlenden Rechtsmittelbelehrung also die Berufungsfrist von 14~Tagen auf 3~Monate nach Zustellung des (unvollständigen) Urteils.
+Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, \S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!\S~13!Abs.~2}. Dies ändert nichts an der Ausschlussfrist von 3~Monaten nach Zugang, nach der eine Entscheidung unanfechtbar ist. Effektiv verlängert sich bei einer fehlenden Rechtsmittelbelehrung also die Berufungsfrist von 14~Tagen auf 3~Monate nach Zustellung des (unvollständigen) Urteils.
 
 Wenngleich die Schiedsgerichtsordnung zu einer bloß unrichtigen, d.h. prinzipiell nicht unterbliebenen, aber nicht vollständigen Rechtsmittelbelehrung schweigt, ist anzunehmen, dass dies zur gleichen Rechtsfolge führt: Sinn der \enquote{Fristverlängerung} ist, dass ein Fehler des Gerichts den Parteien nicht schaden soll. Zweck der Rechtsmittelbelehrung ist es, den Parteien den Zugang zu effektivem Rechtsschutz zu ermöglichen, ohne dass sie die Schiedsgerichtsordnung in all ihren Facetten kennen müssen. Da jeder Fehler eines Rechtsmittels dem Rechtsmittel gleichermaßen schadet, besteht kaum ein Unterschied zwischen einer fehlenden und einer unrichtigen Rechtsmittelbelehrung. Im Gegenteil können die Parteien auf den Inhalt der Rechtsmittelbelehrung vertrauen, der Schaden einer unrichtigen Belehrung könnte daher auch als größer angesehen werden als der einer unterbliebenen Belehrung. Auch bei einer fehlerhaften Rechtsmittelbelehrung \enquote{verlängert} sich die Frist also auf 3~Monate.
 
