--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -1,5 +1,5 @@
 % \begin{refsection}
-\chapterpreamble{Innerhalb des Organs „Schiedsgericht“, das sich zusammensetzt aus den gewählten Richtern und Ersatzrichtern, stellen die mit dem jeweiligen Verfahren befassten Richter das (entscheidende) „Schiedsgericht“ dar. Die genaue Zusammensetzung ergibt sich aus der Eigenschaft als Schiedsrichter oder (im Fall von Kammersystemen) aus der Geschäftsordnung. Die Zusammensetzung muss von vorn herein feststehen und darf nicht willkürlich verändert werden. Ein einmal befasster Richter kann regelmäßig nur durch Ausschluss aus dem konkreten Verfahren (typischerweise wegen Besorgnis der Befangenheit), generelle Beurlaubung oder Rücktritt vom Amt aus einem Verfahren ausscheiden. Ein temporäres Ausscheiden und spätere Wiederbefassung kommt ebensowenig in Betracht wie eine Rücktritt nur für ein einzelnes Verfahren. Ablehnungsanträge (Anträge auf Feststellung der Besorgnis der Befangenheit) müssen sich immer gegen jeweils eine konkrete Person richten und müssen einzeln (im Zweifel in der zeitlichen Reihenfolge der Antragstellung) entschieden werden. Näheres legt §~5~SGO\index[paridx]{SGO!\S~5} fest.}
+\chapterpreamble{Innerhalb des Organs „Schiedsgericht“, das sich zusammensetzt aus den gewählten Richtern und Ersatzrichtern, stellen die mit dem jeweiligen Verfahren befassten Richter das (entscheidende) „Schiedsgericht“ dar. Die genaue Zusammensetzung ergibt sich aus der Eigenschaft als Schiedsrichter oder (im Fall von Kammersystemen) aus der Geschäftsordnung. Die Zusammensetzung muss von vorn herein feststehen und darf nicht willkürlich verändert werden. Ein einmal befasster Richter kann regelmäßig nur durch Ausschluss aus dem konkreten Verfahren (typischerweise wegen Besorgnis der Befangenheit), generelle Beurlaubung oder Rücktritt vom Amt aus einem Verfahren ausscheiden. Ein temporäres Ausscheiden und spätere Wiederbefassung kommt ebensowenig in Betracht wie eine Rücktritt nur für ein einzelnes Verfahren. Ablehnungsanträge (Anträge auf Feststellung der Besorgnis der Befangenheit) müssen sich immer gegen jeweils eine konkrete Person richten und müssen einzeln (im Zweifel in der zeitlichen Reihenfolge der Antragstellung) entschieden werden. Näheres legt \S~5~SGO\index[paridx]{SGO!\S~5} fest.}
 
 \chapter{Zusammensetzung des Schiedsgerichts}
 %\section{Organ}
