--- a/Organisation.tex
+++ b/Organisation.tex
@@ -13,6 +13,10 @@
 %\section{Haushalt}
 
 %\section{Geschäftsordnung}
+%\subsection{Geltungsbereich}
+%→ nur das eigene Gericht, nicht weitere, auch nicht untergeordnete!
+%\subsection{Pflichtinhalte}
+%\subsection{Weitere Inhalte}
 
 
 %\chapterbib
