Hinzugefügt: Puppe, Sauter/Schweyer/Waldner

--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -6,7 +6,7 @@
   shorthand	= {Lenski},
   publisher	= {Nomos},
   year		= {2011},
-  location	= {Baden-Baden},
+  address	= {Baden-Baden},
   isbn		= {978-3-8329-1393-9}
 }
 @COMMENTARY{ipsen2008parteiengesetz,
@@ -18,7 +18,7 @@
   shorthand	= {Ipsen},
   publisher	= {Beck},
   year		= {2008},
-  location	= {München},
+  address	= {München},
   isbn		= {978-3406575310}
 }
 @COMMENTARY{kersten2007parteiengesetz,
@@ -42,6 +42,7 @@
   year		= {2013},
   address	= {Baden-Baden}
 }
+
 @ARTICLE{Loewisch1985,
   title = {Der Ausschluß aus politischen Parteien},
   shorttitle = {Parteiausschluss},
@@ -53,6 +54,23 @@
   location = {Bonn},
   url = {http://www.freidok.uni-freiburg.de/volltexte/5169/pdf/Loewisch_Der_Ausschluss_aus_politischen_Parteien.pdf},
   urldate = {2015-04-19}
+}
+@BOOK{Puppe2008,
+  title = {Kleine Schule des juristischen Denkens},
+  author = {Ingeborg Puppe},
+  publisher = {UTB, Vandenhoek & Ruprecht},
+  year = {2008},
+  address = {Göttingen}
+}
+@BOOK{sauter2010,
+  author	= {Eugen Sauter / Gerhard Schweyer / Wolfram Walter},
+  title		= {Der eingetragene Verein},
+  subtitle	= {Gemeinverständliche Erläuterungen des Vereinsrechts unter Berücksichtigung neuester Rechtsprechung mit Formularteil},
+  shorthand	= {Sauter/Schweyer/Waldner},
+  publisher	= {Beck},
+  edition	= {19},
+  year		= {2010},
+  address	= {München}
 }
 @PHDTHESIS{Risse1985,
   location = {Berlin},
@@ -103,6 +121,15 @@
   gender = {sn},
   url = {http://piraten-bsg.de/#677993841}
 }
+@RULING{BSG1215HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {BSG 12/15-H S},
+  date = {2015-05-28},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1997356682}
+}
 @RULING{BSG1415HS,
   court = {Bundesschiedsgericht},
   shortcourt = {BSG},
@@ -147,6 +174,15 @@
   date = {2015-07-17},
   gender = {sn},
   url = {http://piraten-bsg.de/#549629106}
+}
+@RULING{LSGBB135,
+  court = {Landesschiedsgericht~Brandenburg},
+  shortcourt = {LSG~BB},
+  decisiontype = {Urteil},
+  sign = {LSG Bbg 13/5},
+  date = {2014-07-09},
+  gender = {sn},
+  url = {https://wiki.piratenbrandenburg.de/images/f/f2/LSG-Bbg-13-5\_Urteil\_2014\_07\_09.pdf}
 }
 @RULING{LSGBB147,
   court = {Landesschiedsgericht~Brandenburg},
